支持输出链接异常的主机

--- a/templates/巡检报告.md
+++ b/templates/巡检报告.md
@@ -9,13 +9,15 @@
 本次巡检相关参数说明：
 
 * 巡检时间：{0}
-* 涉及范围：共{1}台主机
-* 风险指数：正常
 * 检测项目：CPU/磁盘/内存/服务/进程...
+* 涉及范围：共{1}台主机,其中{2}台链接异常(异常主机不会显示在下方巡检结果中)
+> 登陆异常主机列表:
 
-> 风险指数：90-100 表示正常；其他异常。。
+IP |
+---|
+{3}|
 
 ## <a name="error_explain">三、异常说明</a>
 
-以下是对CPU负载、磁盘空间使用率、Selinux状态、内存使用率、服务部署情况的数据简报，巡检详细数据记录请点击<a href="./{2}.html"><此处></a>
+以下是对CPU负载、磁盘空间使用率、Selinux状态、内存使用率、服务部署情况的数据简报，巡检详细数据记录请点击<a href="./{3}.html"><此处></a>
 
